--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env VUE_APP_ENV=dev vue-cli-service serve",
+    "dev": "cross-env VUE_APP_ENV=dev vue-cli-service serve --open",
     "build:test": "cross-env VUE_APP_ENV=test vue-cli-service build",
     "build:fz": "cross-env VUE_APP_ENV=fz vue-cli-service build",
     "build:pro": "cross-env VUE_APP_ENV=pro vue-cli-service build",
@@ -33,6 +33,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "lint-staged": "^10.4.0",
     "prettier": "^1.19.1",
     "style-resources-loader": "^1.3.3",
     "vue-cli-plugin-style-resources-loader": "^0.1.4",
